--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,10 +1,10 @@
 branch-defaults:
   master:
-    environment: railsplitter-dev
+    environment: null
 global:
-  application_name: railsplitter
+  application_name: railsplitter2
   default_ec2_keyname: Filezilla
-  default_platform: Ruby 2.1 (Puma)
+  default_platform: Ruby 2.1 (Passenger Standalone)
   default_region: us-west-2
   profile: eb-cli
   sc: git
